# openuma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/DISCUSSION_TEMPLATE/: hardware_results.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_profile.yml
.github/workflows/: build.yml  release.yml
crates/api_server/: Cargo.toml  main.rs
crates/api_server/src/: handlers.rs  lib.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: analyzer.rs  lib.rs  runners.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  lib.rs  main.rs
crates/config_gen/: Cargo.toml
crates/config_gen/src/: lib.rs  llama.rs  model_reader.rs
crates/hw_probe/: Cargo.toml
crates/hw_probe/src/: cpu.rs  errors.rs  igpu.rs  lib.rs  platform.rs  ram.rs  types.rs
crates/hw_probe/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/mem_mgr/: Cargo.toml
crates/mem_mgr/src/: lib.rs  partitioner.rs
crates/mem_mgr/src/zero_copy/: linux.rs  macos.rs  mod.rs  windows.rs
crates/profile_db/: Cargo.toml
crates/profile_db/src/: db.rs  lib.rs  loader.rs
crates/tui/: Cargo.toml  main.rs
crates/tui/src/: app.rs  lib.rs  state.rs  ui.rs
docs/outreach/: hackernews.md  llamacpp_discussion.md  reddit_localllama.md
