[package]
name = "api_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openuma-api"
path = "main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hw_probe = { path = "../hw_probe" }
benchmark = { path = "../benchmark" }
