[package]
name = "api_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "openuma-api"
path = "main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hw_probe = { path = "../hw_probe" }
benchmark = { path = "../benchmark" }
mem_mgr = { path = "../mem_mgr" }
config_gen = { path = "../config_gen" }
profile_db = { path = "../profile_db" }
dirs.workspace = true
