[package]
name = "tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openuma-tui"
path = "main.rs"

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
hw_probe = { path = "../hw_probe" }
serde.workspace = true
serde_json.workspace = true
